<resources>
    <string name="app_name">ILights</string>
    <string name="prefs_database_name">user_data</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="name_hint">Enter Name</string>
    <string name="confirm_password_hint">Re-Enter Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Log In</string>
    <string name="or">OR</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="required">Required*</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="copied_board_id">Copied BoardId to ClipBoard</string>
    <string name="single_space">\u0020</string>
    <string name="exit">Exit</string>
    <string name="please_wait">Please Wait……</string>
    <string name="verifying_user">Verifying User Data……</string>
    <string name="deleting_user">Deleting User</string>
    <string name="deleting_user_data">Erasing user data from database</string>
    <string name="login_failed">Login Failed</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="agree">Agree</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="disagree">Disagree</string>
    <string name="consent_dialog_title">Analytics Consent</string>
    <string name="consent_dialog_body">We\'ll use Firebase Analytics to record events when you interact with the app to improve user experience.\nWe don\'t use your personal data and only in-app events are captured for analytics.\n\nYou can change your choice later in the app settings.</string>
    <string name="loading">Loading…</string>
    <string name="blocked">Blocked</string>
    <string name="change_name_title">Change name</string>
    <string name="change_name_hint">Enter new name</string>
    <string name="update">Update</string>
    <string name="restart">RESTART</string>
    <string name="update_downloaded">An update has just been downloaded.</string>
    <string name="failed_to_update">Failed to update app.</string>
    <string name="in_app_update_failed">Update was unsuccessful.\n Try again to continue.</string>
    <string name="successfully_updated">App update Successful.</string>
    <string name="email_verified">Email verified</string>
    <string name="email_not_verified">Email not verified. Tap to verify</string>
    <string name="sent_verification_email">Verification Email was sent. Check Your Email inbox and verify</string>
    <string name="sent_no_verification_email">Verification Email was not sent. Try Again</string>
    <string name="email_already_verified">Email is already verified</string>
    <string name="email_verification_sign_out">Verification Email was sent. Login Again</string>
    <string name="block_message">Your Access is blocked.\n Ask any Admin to unblock</string>
    <string name="google_play_update">Update Available</string>
    <string name="empty_search_string">Empty search text</string>
    <string name="same_as_before">Same as Previous</string>
    <string name="unknown_error">Unknown Error Occurred</string>
    <string name="forced_update">Mandatory Update</string>
    <string name="forced_update_message">This update is necessary for the functionality of the application.\nUpdate to continue using the app.</string>
    <string name="splash_page_register">REGISTER</string>
    <string name="splash_page_sign_in">SIGN IN</string>
    <string name="splash_page_sign_in_helper">Already registered?</string>
    <string name="splash_page_version_placeholder">version: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_page_title">Sign In</string>
    <string name="singing_in">Signing in....</string>
    <string name="signing_up">Signing up....</string>
    <string name="send">send</string>
    <string name="internet_connection_error">Please check your internet connection and try again</string>
    <string name="forgot_password_email_sent_success">Email sent successfully</string>
    <string name="forgot_password_email_send_failure">Failed to send email</string>
    <string name="forgot_password_info">An email with password reset link will be sent to the entered email address. Click the link to reset your password then come back again and login with your new password.\nThank You!</string>
    <string name="signup_page_title">Register</string>
    <string name="signup_page_register_btn">Sign Up</string>
    <string name="splash_page_policy"><![CDATA[By clicking <b>SIGN IN/REGISTER</b>, you agree to the <a href = "%1$s"> User agreement and Privacy Policy.</a>]]></string>
    <string name="consent_dialog_policy_link">Link to Privacy Policy</string>
    <string name="alert_dialog_placeholder_btn_positive">OK</string>
    <string name="alert_dialog_placeholder_btn_negative">Cancel</string>
    <string name="alert_dialog_placeholder_title">Title</string>
    <string name="password_not_match">Passwords don\'t match</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="email_search_hint">Enter full email</string>
    <string name="name_search_hint">Enter full name</string>
    <string name="data_fetch_failure">Failed to fetch data</string>
    <string name="no_user_with_this_email">No users exists with this %1$s </string>
    <string name="modified_user_access">Successfully modified user access</string>
    <string name="not_modified_user_access">Failed to modify user access</string>
    <string name="role_dialog_role_level">Current Level: %1$s</string>
    <string name="role_dialog_role_editor_title">Change Access</string>
    <string name="role_dialog_radio_block">BLOCK</string>
    <string name="role_dialog_radio_user">USER</string>
    <string name="role_dialog_radio_admin">ADMIN</string>
    <string name="role_dialog_radio_developer">DEVELOPER</string>
    <string name="add_pins">Add Pin</string>
    <string name="add_pin_item_title">Pin Configuration %1$d</string>
    <string name="add_pin_frag_item_title">%1$s Pin</string>
    <string name="add_pin_frag_item_hint_text">Pin</string>
    <string name="add_pin_frag_item_pin_name">Pin name</string>
    <string name="add_pin_frag_item_pin_number">Pin number %1$d</string>
    <string name="all_pins_active">All pins are in use.</string>
    <string name="pin_name_update_successful">Successfully updated name of Pin %1$d</string>
    <string name="pin_name_update_failure">Failed to update pin name</string>
    <string name="pin_name_add_successful">Successfully added Pin %1$d</string>
    <string name="pin_name_add_failure">Failed to add pin</string>
    <string name="pin_name_delete_successful">Successfully deleted Pin %1$d</string>
    <string name="pin_name_delete_failure">Failed to delete pin</string>
    <string name="pin_delete_message">Deleting Pin %1$d will remove from board. Are you sure ?</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="not_show_again">Don\'t show again</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="twice_back_press_message">Press back button again to exit.</string>
    <string name="no_network_detected">Network error\nYour network might be very slow or you are not connected to internet</string>
    <string name="delete_account_body_text">This will delete your account and data associated with it.\nClick Yes to proceed </string>
    <string name="change_password">Change Password</string>
    <string name="re_auth">Re-Authentication %1$s</string>
    <string name="successful">Success </string>
    <string name="failed">Failed</string>
    <string name="re_authenticated">Re-Authenticated</string>
    <string name="re_auth_btn_text">Re-Authenticate</string>
    <string name="settings_snack_message">This setting will take effect from next app launch.</string>
    <string name="password_updated">Password Updated Successfully</string>
    <string name="password_update_failure">Failed to update Password</string>
    <string name="re_details_message">This operation is very sensitive.\nYou must re-authenticate yourself to continue</string>
    <string name="delete_user_message">Deleting your Account will remove all user data from database.\This is a destructive action so in order to use the app you must sign in again</string>
    <string name="confirm_action">Confirm Action</string>
    <string name="sign_out_body_text">Are you sure to log out ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="controller_title">Controller</string>
    <string name="controller_board_status">Board is %1$s</string>
    <string name="controller_update_failure">Failed to update data</string>
    <string name="controller_item_details">%5$s\nPin Configuration %1$d\n\nSwitched %2$s by %3$s\nat %4$s</string>
    <string name="board">Boards</string>
    <string name="edit">edit</string>
    <string name="add_board">Add Board</string>
    <string name="board_form_creation_title">Creating Board</string>
    <string name="board_form_success_message">Created new Board %1$s.</string>
    <string name="board_form_creation_body_auth">Creating Authentication…</string>
    <string name="board_form_creation_body_main">Writing Board Data....</string>
    <string name="board_form_error">Failed to add board</string>
    <string name="board_form_user_retrieval_error">Failed to retrieve data. Check your internet connection.</string>
    <string name="board_list_item_details">%1$s\n\nCreated By: %2$s \nCreator Email: %3$s \nCreated On: %4$s</string>
    <string name="board_list_item_board_id">BoardID: <u>%1$s</u></string>
    <string name="board_list_item_uid">UID <b>:</b> GvjyhTVytGTVbyuVYJVcfgyvCGF</string>
    <string name="board_form_title_frag_title">Enter details</string>
    <string name="board_form_title_hint">Enter name…</string>
    <string name="board_form_title_helper">Pick a name for the board</string>
    <string name="display_header">Display</string>
    <string name="theme_header">Theme</string>
    <string name="name_header">Change Name</string>
    <string name="verify_email">Verify Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="about_header">About</string>
    <string name="profile_header">Profile</string>
    <string name="admin_header">Admin</string>
    <string name="privacy_header">Privacy</string>
    <string name="version_name">Version</string>
    <string name="update_available">Update Available</string>
    <string name="search_users">Search Users</string>
    <string name="manage_users">Manage Users</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send_statistics">Send Statistics</string>
    <string name="send_statistics_summary">Automatically send usage statistics to help us improve the user experience and application.</string>
    <string name="request_public_boards">Get access to more boards</string>
    <string name="more_boards">More Boards</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="reset_database">Reset Database</string>
    <string name="reset_database_summary">Clear offline database</string>
    <string name="board_data">Board data</string>
    <string name="board_reset_database_summary">Contains various board related data which do not changes frequently like the creation and owner details.\n<b>Tap to clear.</b></string>
    <string name="notifications_data">Notification data</string>
    <string name="notifications_reset_database_summary">Older notifications data are stored in the database\n<b>Tap to clear.</b></string>
    <string name="appearance">Appearance</string>
</resources>