<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.raushankit.ILghts.utils.ColoredPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/display_header">

        <ListPreference
            app:icon="@drawable/ic_baseline_brightness_6_24"
            app:entries="@array/theme_entries_v29"
            app:entryValues="@array/theme_values_v29"
            app:key="theme"
            app:defaultValue="light"
            app:dialogTitle="Choose Theme"
            app:title="@string/theme_header"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:title="@string/appearance"
            app:key="appearance"
            app:defaultValue="shamrock green"
            app:icon="@drawable/ic_baseline_panorama_fish_eye_24"/>

    </com.raushankit.ILghts.utils.ColoredPreferenceCategory>

    <com.raushankit.ILghts.utils.ColoredPreferenceCategory
        app:key="profile_category"
        app:iconSpaceReserved="false"
        app:enabled="true"
        app:title="@string/profile_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="change_name"
            app:title="@string/name_header"
            app:icon="@drawable/ic_baseline_person_24"
            app:fragment="com.raushankit.ILghts.fragments.settings.ChangeName"/>

        <Preference
            app:icon="@drawable/ic_baseline_key_24"
            app:key="change_password"
            app:isPreferenceVisible="false"
            app:title="@string/change_password"
            app:fragment="com.raushankit.ILghts.fragments.settings.ReAuthFragment"/>

        <Preference
            app:icon="@drawable/ic_baseline_verified_user_24"
            app:title="@string/verify_email"
            app:summary="@string/email_not_verified"
            app:key="verify_email" />

        <Preference
            app:title="@string/sign_out"
            app:key="sign_out"
            app:icon="@drawable/ic_baseline_logout_24"/>

        <Preference
            app:title="@string/delete_account"
            app:key="delete_account"
            app:icon="@drawable/ic_baseline_delete_forever_24"
            app:fragment="com.raushankit.ILghts.fragments.settings.ReAuthFragment"/>

    </com.raushankit.ILghts.utils.ColoredPreferenceCategory>

    <com.raushankit.ILghts.utils.ColoredPreferenceCategory
        app:isPreferenceVisible="true"
        app:iconSpaceReserved="false"
        app:key="admin_category"
        app:title="@string/admin_header">

        <ListPreference
            app:icon="@drawable/ic_baseline_manage_search_24"
            app:entries="@array/admin_search_entries"
            app:entryValues="@array/admin_search_values"
            app:key="admin_search"
            app:defaultValue="by_name"
            app:dialogTitle="Search Users"
            app:title="@string/search_users"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:icon="@drawable/ic_baseline_manage_accounts_24"
            app:title="@string/manage_users"
            app:fragment="com.raushankit.ILghts.fragments.settings.ManageUserFragment"
            app:key="manage_users"/>
    </com.raushankit.ILghts.utils.ColoredPreferenceCategory>

    <com.raushankit.ILghts.utils.ColoredPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/reset_database"
        app:summary="@string/reset_database_summary">
        <Preference
            app:key="board_offline_data"
            app:icon="@drawable/ic_arrow_forward_preference_ios_48px"
            app:summary="@string/board_reset_database_summary"
            app:title="@string/board_data"/>
        <Preference
            app:key="notifications_offline_data"
            app:icon="@drawable/ic_arrow_forward_preference_ios_48px"
            app:summary="@string/notifications_reset_database_summary"
            app:title="@string/notifications_data"/>
    </com.raushankit.ILghts.utils.ColoredPreferenceCategory>

    <com.raushankit.ILghts.utils.ColoredPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/privacy_header">
        <Preference
            app:icon="@drawable/ic_baseline_security_24"
            app:title="@string/privacy_policy"
            app:key="privacy_policy"/>
        <CheckBoxPreference
            app:key="send_statistics"
            app:disableDependentsState="true"
            app:icon="@drawable/ic_baseline_analytics_24"
            app:title="@string/send_statistics"
            app:summary="@string/send_statistics_summary"
            app:defaultValue="false" />
    </com.raushankit.ILghts.utils.ColoredPreferenceCategory>

    <com.raushankit.ILghts.utils.ColoredPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_header">
        <Preference
            app:icon="@drawable/ic_google_play_logo"
            app:isPreferenceVisible="false"
            app:title="@string/update_available"
            app:key="update_available"/>
        <Preference
            app:icon="@drawable/ic_baseline_info_24"
            app:title="@string/version_name"
            app:key="version_name"/>
    </com.raushankit.ILghts.utils.ColoredPreferenceCategory>

</PreferenceScreen>