<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/_10sdp"
    android:background="@drawable/role_dialog_background"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/frag_dialog_role_strip_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dialog_role_frag_strip"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/frag_dialog_role_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/change_name_hint"
                android:textColor="@color/splash_screen_btn_text"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/frag_dialog_role_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/email_hint"
                android:textColor="@color/splash_screen_btn_text"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/frag_dialog_current_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/role_dialog_role_level"
                android:textColor="@color/splash_screen_btn_text"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/frag_dialog_role_editor_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/role_dialog_role_editor_title"
            android:textColor="@color/user_info_name_text"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_dialog_role_strip_parent" />

        <RadioGroup
            android:id="@+id/role_dialog_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/frag_dialog_role_editor_title">
            <RadioButton
                android:id="@+id/role_dialog_radio_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/role_dialog_radio_block" />
            <RadioButton
                android:id="@+id/role_dialog_radio_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/role_dialog_radio_user" />
            <RadioButton
                android:id="@+id/role_dialog_radio_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/role_dialog_radio_admin" />
            <RadioButton
                android:id="@+id/role_dialog_radio_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/role_dialog_radio_developer" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/role_dialog_positive_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/alert_dialog_placeholder_btn_positive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/role_dialog_radio_group"
            app:layout_constraintWidth_percent="0.3"
            app:strokeWidth="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/role_dialog_negative_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/alert_dialog_placeholder_btn_negative"
            app:layout_constraintEnd_toStartOf="@id/role_dialog_positive_button"
            app:layout_constraintTop_toBottomOf="@+id/role_dialog_radio_group"
            app:layout_constraintWidth_percent="0.3"
            app:strokeWidth="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>