<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp"
    android:background="@drawable/loading_dialog_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/alert_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_variable"
        android:padding="@dimen/_5sdp"
        android:text="@string/alert_dialog_placeholder_title"
        android:textColor="@color/forgot_password_btn"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alert_dialog_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_variable"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/alert_dialog_title"
        android:text="@string/forgot_password_info"
        android:textColor="@color/forgot_password_btn"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alert_dialog_positive_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:layout_constraintWidth_percent="0.35"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/alert_dialog_placeholder_btn_positive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_dialog_body" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alert_dialog_negative_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:layout_constraintWidth_percent="0.35"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/alert_dialog_placeholder_btn_negative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_dialog_body"
        app:strokeWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>